# fue-python

./: .gitignore  CHANGELOG.md  FUF.md  MANIFEST.in  PERFORMANCE.md  README.md  TODO.md  app.py  pyproject.toml  run_ripc1.py  setup.py
.github/workflows/: wheels.yml
benchmarks/: bench_estimator.py
bugs/: BUG-0001-forecast-mean-drift.md  BUG-0002-binding-fixed-factor-arrays.md  BUG-0003-residual-plot-annual-xaxis.md  BUG-0004-forecast-fit-stale-attrs.md  BUG-0005-optimizer-spurious-optimum-multimodal.md  README.md  TEMPLATE.md
bugs/BUG-0004-repro/: BRENT.pre  EA_CPI.pre  repro.py
conda-recipe/: meta.yaml
csrc/: fue_api.c  fue_api.h
csrc/internal/: drvmlest.c  elfvarma.c  fue.h  nlatools.c  qnewtopt.c  usmelard.c
examples/: demo_ripc2.py  quickstart.py  sps_inflation.py
notebooks/: fue_example.ipynb
src/fue/: __init__.py  _build_cffi.py  _engine.py  _fue_engine.c  bug_cli.py  bugs.py  cast_us.py  cli.py  datasets.py  diagnostics.py  elfvarma.py  forecast.py  fuf_cli.py  inp.py  intervention.py  model.py  plots.py  qnewtopt.py  report.py  report_forecast.py  series.py
tests/: test_api.py  test_bug_0001_forecast_drift.py  test_bug_0002_binding_factor_caps.py  test_bug_0003_residual_plot_annual.py  test_bug_0004_forecast_stale_attrs.py  test_bugs.py  test_cast_us.py  test_elfvarma.py  test_estimation.py  test_forecast.py  test_performance.py  test_qnewtopt.py  test_real_cases.py  test_reliability.py  test_reliability2.py  test_reliability3.py  test_reliability4.py  test_smoke.py
tests/real_cases/: en4_ar18.inp  en4_fac9x2.inp  forecast_S.2.out
tests/real_cases/PRICES/GDP/Sample_1.2003_4.2019/Idem/: R.1.inp
tests/real_cases/PRICES/GDP/Sample_1.2003_4.2019/Mod/: PE.1.inp  PE.1.out  R.1.inp  R.1.out  R.2.inp  R.2.out
tests/real_cases/PRICES/GDP/Sample_1.2003_4.2019/Mod/SF/: R.2.out
tests/real_cases/PRICES/IPC/Mensual/sample_1.2002_12.2007/: RIPC.0.inp  RIPC.0.out  RIPC.1.inp  RIPC.1.out  RIPC.2.inp  RIPC.2.out  RIPC.3.1.inp  RIPC.3.1.out  RIPC.3.inp  RIPC.3.out  RIPC.4.inp  RIPC.4.out  RIPC.inp  forecast_RIPC.1.inp
tests/real_cases/PRICES/IPC/Trimestral/Sample_1.2003_4.2019/Idem/: R.1.inp  R1.inp
tests/real_cases/PRICES/IPC/Trimestral/Sample_1.2003_4.2019/Mod/: R.1.inp  R.2.inp  R.2.out
tests/real_cases/PRICES/IPC/Trimestral/Sample_1.2003_4.2019/Mod/Coint/: R.1.inp  R.1.out  R.2.inp  R.2.out  R.3.inp  R.3.out  R.4.inp  R.4.out
tests/real_cases/PRICES/IPC/Trimestral/Sample_1.2003_4.2019/Mod/SF/: R.1.out  R.2.inp
tests/real_cases/PRICES/IPC/Trimestral/Sample_1.2003_4.2019/Mod/old/: R.2.inp  R.2.out  R.3.inp  R.3.out  R.4.inp  R.4.out  R.5.inp  R.5.out  R.6.inp  R.6.out
tests/real_cases/PRICES/PCE/Sample_1.2003_4.2019/Idem/: R.1.inp
tests/real_cases/PRICES/PCE/Sample_1.2003_4.2019/Mod/: R.1.inp  R.1.out  R.2.inp  R.2.out
tests/real_cases/PRICES/PCE/Sample_1.2003_4.2019/Mod/SF/: R.1.inp  R.1.out
