[build-system]
requires = ["setuptools>=60", "cffi>=1.15", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "fue"
version         = "0.1.0"
description     = "Exact maximum likelihood estimation of univariate time series (ARMAX with transfer functions)"
license         = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
dependencies    = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "cffi>=1.15",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pandas"]

[tool.setuptools.packages.find]
where = ["src"]

# ── cibuildwheel ──────────────────────────────────────────────────────────────

[tool.cibuildwheel]
# Python versions to build for
build = "cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds and PyPy
skip = "*-win32 *-manylinux_i686 pp*"

# Run the test suite after each wheel is built
test-requires = ["pytest"]
test-command  = "pytest {project}/tests/ -q"

[tool.cibuildwheel.linux]
# manylinux_2_28 = AlmaLinux 8; more recent glibc than manylinux2014
manylinux-x86_64-image  = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

# Install GSL before building.  auditwheel repair then bundles libgsl.so
# and libgslcblas.so into the wheel (they are not on the manylinux whitelist).
before-all = "dnf install -y gsl-devel"

[tool.cibuildwheel.macos]
# Install GSL via Homebrew; delocate bundles the dylibs into the wheel.
before-all = "brew install gsl"

# Build for both Intel and Apple Silicon
archs = ["x86_64", "arm64"]

