[build-system]
# cffi is kept here so the build environment has it available when setup.py
# attempts to compile the C extension.  The extension is skipped gracefully
# when FUE_SKIP_C=1 or when GSL is absent — see setup.py.
requires = ["setuptools>=60,<69", "cffi>=1.15", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "fue"
version         = "0.1.8"
description     = "Exact maximum likelihood estimation of univariate time series (ARMAX with transfer functions)"
readme          = "README.md"
license         = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
authors         = [
    { name = "David E. Guerrero",  email = "davidesg@ucm.es" },
]
keywords        = ["time series", "ARIMA", "ARMAX", "exact maximum likelihood", "Box-Jenkins"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# cffi is NOT a runtime dependency: the compiled extension embeds the cffi
# runtime inside the .so, and the pure-Python fallback does not need cffi.
dependencies    = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.scripts]
fue = "fue.cli:main"
fuf = "fue.fuf_cli:main"
fue-bug = "fue.bug_cli:main"

[project.optional-dependencies]
# pip install "fue[c-engine]" — record cffi as an explicit runtime dep when
# the C extension is used (mostly useful for lockfiles / conda packaging).
c-engine = ["cffi>=1.15"]
report   = ["jinja2>=3.0"]
pdf      = ["jinja2>=3.0", "weasyprint>=60"]
dev      = ["pytest>=7", "pandas"]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

# ── cibuildwheel ──────────────────────────────────────────────────────────────

[tool.cibuildwheel]
# Python versions to build for
build = "cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds and PyPy
skip = "*-win32 *-manylinux_i686 pp*"

# Smoke-test each built wheel: verify it imports and estimates/forecasts a small
# model. NOT the full golden numerical battery — exact log-likelihoods are
# platform/BLAS-sensitive for ill-conditioned models (e.g. the multimodal
# cointegration case R.4), so that battery runs in the dev job on a fixed
# platform, not as a per-wheel gate across 16 build targets.
test-requires = ["pytest"]
test-command  = "pytest {project}/tests/test_smoke.py -q"

[tool.cibuildwheel.linux]
# manylinux_2_28 = AlmaLinux 8; more recent glibc than manylinux2014
manylinux-x86_64-image  = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

# Install GSL before building.  auditwheel repair then bundles libgsl.so
# and libgslcblas.so into the wheel (they are not on the manylinux whitelist).
# Portable across manylinux (AlmaLinux → dnf) and musllinux (Alpine → apk):
# without this, musllinux fails with `dnf: not found` (exit 127).
before-all = "if command -v dnf >/dev/null 2>&1; then dnf install -y gsl-devel; else apk add --no-cache gsl-dev; fi"

[tool.cibuildwheel.macos]
# Install GSL via Homebrew; delocate bundles the dylibs into the wheel.
before-all = "brew install gsl"

# Native arch only per runner: the CI matrix has both an Intel (macos-13) and an
# Apple-Silicon (macos-latest) runner, so "auto" covers x86_64 + arm64 across the
# two WITHOUT cross-building. Cross-building would link the runner's single-arch
# Homebrew GSL into the wrong architecture and fail.
archs = ["auto"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

# Install GSL via vcpkg (static-md = static libs + /MD runtime, compatible with Python).
# VCPKG_INSTALLATION_ROOT is set by the GitHub Actions windows-latest runner.
before-all = "vcpkg install gsl:x64-windows-static-md"

# Expose the vcpkg prefix so _build_cffi.py can locate headers and .lib files.
# GSL_ROOT is read in _build_cffi.py; falls back to the vcpkg default if unset.
# NB: cibuildwheel evaluates `environment` values in a shell, so use bash-style
# `$VAR` (NOT `{env:VAR}`, which is not cibuildwheel syntax and is left literal),
# and forward slashes (backslashes are eaten by the shell). MSVC accepts `/`.
environment = { GSL_ROOT = "$VCPKG_INSTALLATION_ROOT/installed/x64-windows-static-md" }

